--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Checkout Page</title>
   </head>
   <body>
+    <header>
+      <h1>Checkout</h1>
+    </header>
    
   </body>
 </html>
