--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <h1>Checkout</h1>
     </header>
     <section>
-      <div></div>
+      <div>
+        
+      </div>
     </section>
    
   </body>
