--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Checkout</h1>
     </header>
     <section>
-      <div class="">
+      <div class="container-1">
         
       </div>
     </section>
