--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
       <h1>Checkout</h1>
     </header>
     <section>
-      <div class="container-1">
-        
-      </div>
+      <div class="container-1"> </div>
 
       <div class="container-2">
-        
+
       </div>
     </section>
    
