--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <h1>Checkout</h1>
     </header>
     <section>
-      <div class="container-1"> </div>
+      <div class="container-1"> 
+        
+      </div>
 
       <div class="container-2">
 
