--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1>Checkout</h1>
     </header>
     <section>
-      <div class="container-1"> 
-        
+      <div class="user-info"> 
+
       </div>
 
       <div class="container-2">
