--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     </header>
     <section>
       <div class="user-info"> 
+        <form action="">
 
+        </form>
       </div>
 
       <div class="container-2">
