--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
       <div class="user-info"> 
         <form action="">
-
+          <p>Contact Information</p>
         </form>
       </div>
 
