--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
       <div class="user-info"> 
         <form action="">
           <p>Contact Information</p>
+
+          <div class="form-info">
+            <label for="email">E-mail</label>
+            <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Enter your email"
+            />
+          </div>
         </form>
       </div>
 
