--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
               placeholder="Enter your email"
             />
           </div>
+
+          <div>
+            
+          </div>
         </form>
       </div>
 
