--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             />
           </div>
 
-          <div>
-            
+          <div class="form-info">
+
           </div>
         </form>
       </div>
