--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
               type="email"
               id="email"
               name="email"
-              placeholder="Enter your email"
+              placeholder="Enter your Email..."
             />
           </div>
 
           <div class="form-info">
-
+            <label for="PhoneNumber">Phone</label>
+            <span class="icon"><i class="fa-solid fa-phone"></i></span>
+            <input
+              type="num"
+              id="num"
+              name="num"
+              placeholder="Enter your Phone No..."
+              />
           </div>
         </form>
       </div>
