--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
               placeholder="Enter your Phone No..."
               />
           </div>
+
+          <p>Shipping Address</p>
+          <div class="form-info">
+            <label for="Name">Name</label>
+            <span class="icon"><i class="fa-solid fa-user"></i></span>
+            <input
+              type="text"
+              id="user-name"
+              name="user-name"
+              placeholder="Enter your Name"
+              />
+          </div>
         </form>
       </div>
 
