--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
               placeholder="Enter your Name"
               />
           </div>
+
+          <div class="form-info">
+            <label for="Address">Address</label>
+            <span class="icon"><i class="fa-solid fa-house"></i></span>
+            <input
+              type="text"
+              name="address"
+              id="address"
+              placeholder="Enter your Address"
+            />
+          </div>
         </form>
       </div>
 
