--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
               placeholder="Enter your Address"
             />
           </div>
+
+          <div class="form-info">
+            <label for="City">City</label>
+            <span class="icon"><i class="fa-solid fa-city"></i></span>
+            <input
+              type="text"
+              name="city"
+              id="city"
+              placeholder="Enter your City"
+            />
+          </div>
         </form>
       </div>
 
