--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
               placeholder="Enter your City"
             />
           </div>
+
+          <div class="form-info postalCode">
+            <label for="PostalCode">Postal code</label>
+            <span class="icon"><i class="fa-solid fa-paper-plane"></i></span>
+            <input
+              type="number"
+              name="postalcode"
+              id="postalcode"
+              />
+          </div>
         </form>
       </div>
 
