--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
             </div>
           </div>
         </form>
+
+        <div class="checkbox">
+          <input
+            type="checkbox"
+            name="save-for-later"
+            id="save"
+            />Save this information for next time.
+        </div>
       </div>
 
       <div class="container">
