--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             id="save"
             />Save this information for next time.
         </div>
+
+        <button type="submit" class="btn-primary">Continue</button>
       </div>
 
       <div class="container">
