--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
       </div>
 
       <div class="container">
+        <div class="item1" id="item-1">
+          <img src="./images/photo1.png" alt="item1" />
+          <div class="info">
+            <h4>Vinatge Bagpack</h4>
+            <p>
+              $54.99 <span> <strike>$94.99</strike> </span>
+            </p>
+            <h5 class="quantity">
+              <span class="plus-symbol">+</span> 1 <span class="minus-symbol">-</span>
+            </h5>
+          </div>
+        </div>
+
 
       </div>
     </section>
