--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
           </div>
         </div>
 
+        <div class="item2" id="item-2">
+          <img src="./images/photo2.png" alt="item2" />
+          <div class="info">
+            <h4>Levi Shoes</h4>
+            <p>
+              $74.99 <span> <strike>$124.99</strike> </span>
+            </p>
+            <h5 class="quantity">
+              <span class="plus-symbol">+</span> 1 <span class="minus-symbol">-</span>
+            </h5>
+          </div>
+        </div>
 
       </div>
     </section>
