--- a/index.html
+++ b/index.html
@@ -134,7 +134,13 @@
           </div>
         </div>
 
+        <div class="shipping-price">
+          <h5>Shipping</h5>
+          <p>$19</p>
+        </div>
+
       </div>
+
     </section>
    
   </body>
