--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
           <p>$19</p>
         </div>
 
+        <div class="total-price">
+          <h5>Total</h5>
+          <p>$148.98</p>
+        </div>
       </div>
 
     </section>
