--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
           <p>$148.98</p>
         </div>
       </div>
-
     </section>
-   
+
+    <footer>
+      <p>Created by <a class="username-github-link" href="https://github.com/khusamayasir/Interior-Consultant">Usama</a>-<a class="devchallengelink" href="https://devchallenges.io/">devChallenges.io</a></p>
+    </footer>
   </body>
 </html>
