--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             />
           </div>
 
-          <div>
+          <div class="">
             <div class="form-info country">
               <label for="country">Country</label>
               <span class="icon"><i class="fa-solid fa-earth-asia"></i></span>
@@ -111,7 +111,7 @@
       <div class="container">
         <div class="item1" id="item-1">
           <img src="./images/photo1.png" alt="item1" />
-          <div class="info">
+          <div class="item-info">
             <h4>Vinatge Bagpack</h4>
             <p>
               $54.99 <span> <strike>$94.99</strike> </span>
@@ -124,7 +124,7 @@
 
         <div class="item2" id="item-2">
           <img src="./images/photo2.png" alt="item2" />
-          <div class="info">
+          <div class="item-info">
             <h4>Levi Shoes</h4>
             <p>
               $74.99 <span> <strike>$124.99</strike> </span>
