--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             />
           </div>
 
-          <div class="">
+          <div class="inline">
             <div class="form-info country">
               <label for="country">Country</label>
               <span class="icon"><i class="fa-solid fa-earth-asia"></i></span>
