--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
 
       <div class="container">
-        <div class="item1" id="item-1">
+        <div class="item" id="item-1">
           <img src="./images/photo1.png" alt="item1" />
           <div class="item-info">
             <h4>Vinatge Bagpack</h4>
@@ -122,7 +122,7 @@
           </div>
         </div>
 
-        <div class="item2" id="item-2">
+        <div class="item" id="item-2">
           <img src="./images/photo2.png" alt="item2" />
           <div class="item-info">
             <h4>Levi Shoes</h4>
