--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
       <h1>Checkout</h1>
     </header>
-    <section>
-      <div class="user-info"> 
-        <form action="">
+    <section class="user-info">
+      <div class="form"> 
+        <form action="GET" class="user-form">
           <p>Contact Information</p>
 
           <div class="form-info">
@@ -45,8 +45,8 @@
             <span class="icon"><i class="fa-solid fa-user"></i></span>
             <input
               type="text"
-              id="user-name"
-              name="user-name"
+              id="user_name"
+              name="user_name"
               placeholder="Enter your Name"
               />
           </div>
