--- a/index.html
+++ b/index.html
@@ -105,10 +105,14 @@
               type="checkbox"
               name="save-for-later"
               id="save"
-              />Save this information for next time.
+              />
+              <label for="agreement">
+                Save this information for next time.
+              </label> 
           </div>
-  
-          <button type="submit" class="btn-primary">Continue</button>
+          <div class="submit">
+            <input type="submit" value="Continue" class="submit-button">
+        </div>
         </div>
   
         <div class="container">
