--- a/index.html
+++ b/index.html
@@ -4,163 +4,158 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+    />
     <link rel="icon" href="./images/devchallenges.png">
     <link rel="stylesheet" href="style.css" />
     <title>Checkout Page</title>
   </head>
   <body>
-    <section>
-      <header>
-        <h1>Checkout</h1>
-      </header>
-      <main>
-        <div class="form"> 
-          <form action="#">
-            <p>Contact Information</p>
-  
-            <div class="form-info">
-              <label for="email">E-mail</label>
-              <span class="material-symbols-outlined icon-left">mail</span>
-              <input
-                type="email"
-                id="email"
-                name="email"
-                placeholder="Enter your Email..."
-              />
-            </div>
-  
-            <div class="form-info">
-              <label for="PhoneNumber">Phone</label>
-              <span class="material-symbols-outlined icon-left">call</span>
-              <input
-                type="num"
-                id="num"
-                name="num"
-                placeholder="Enter your Phone No..."
-                />
-            </div>
-  
-            <p>Shipping Address</p>
-            <div class="form-info">
-              <label for="Name">Name</label>
-              <span class="material-symbols-outlined icon-left">account_circle</span>
-            </div>
-              <input
-                type="text"
-                id="user_name"
-                name="user_name"
-                placeholder="Enter your Name"
-                />
-            </div>
-  
-            <div class="form-info">
-              <label for="Address">Address</label>
-              <span class="material-symbols-outlined icon-left">home</span>
-              <input
-                type="text"
-                name="address"
-                id="address"
-                placeholder="Enter your Address"
-              />
-            </div>
-  
-            <div class="form-info">
-              <label for="City">City</label>
-              <span class="material-symbols-outlined icon-left">apartment</span>
-              <input
-                type="text"
-                name="city"
-                id="city"
-                placeholder="Enter your City"
-              />
-            </div>
-  
-            <div class="inline">
-              <div class="form-info country">
-                <label for="country">Country</label>
-                <span class="material-symbols-outlined icon-left">public</span>
-                <span class="material-symbols-outlined icon-right">expand_more</span>
-                <select name="country" id="country" required>
-                  <option value="country" disabled selected>Choose your Country</option>
-                  <option value="pakistan">Pakistan</option>
-                  <option value="china">China</option>
-                  <option value="india">India</option>
-                </select>
-              </div>
-    
-              <div class="form-info postalCode">
-                <label for="PostalCode">Postal code</label>
-                <span class="material-symbols-outlined icon-left">markunread_mailbox</span>
-                <input
-                  type="number"
-                  name="postalcode"
-                  id="postalcode"
-                  />
-              </div>
-            </div>
-          </form>
-  
-          <div class="checkbox">
+    <header>
+      <h2>Checkout</h2>
+    </header>
+    <section class="main">
+      <div class="user-info"> 
+        <form action="GET" class="my-form">
+          <p>Contact Information</p>
+
+          <div class="form-info">
+            <label for="email">E-mail</label>
+            <span class="icon"><i class="fa-solid fa-envelope"></i></span>
             <input
-              type="checkbox"
-              name="save-for-later"
-              id="save"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Enter your Email..."
+            />
+          </div>
+
+          <div class="form-info">
+            <label for="PhoneNumber">Phone</label>
+            <span class="icon"><i class="fa-solid fa-phone"></i></span>
+            <input
+              type="num"
+              id="num"
+              name="num"
+              placeholder="Enter your Phone No..."
               />
-              <label for="agreement">
-                Save this information for next time.
-              </label> 
           </div>
-          <div class="submit">
-            <input type="submit" value="Continue" class="submit-button">
+
+          <p>Shipping Address</p>
+          <div class="form-info">
+            <label for="Name">Name</label>
+            <span class="icon"><i class="fa-solid fa-user"></i></span>
+            <input
+              type="text"
+              id="user-name"
+              name="user-name"
+              placeholder="Enter your Name"
+              />
           </div>
-        </div>
+
+          <div class="form-info">
+            <label for="Address">Address</label>
+            <span class="icon"><i class="fa-solid fa-house"></i></span>
+            <input
+              type="text"
+              name="address"
+              id="address"
+              placeholder="Enter your Address"
+            />
+          </div>
+
+          <div class="form-info">
+            <label for="City">City</label>
+            <span class="icon"><i class="fa-solid fa-city"></i></span>
+            <input
+              type="text"
+              name="city"
+              id="city"
+              placeholder="Enter your City"
+            />
+          </div>
+
+          <div class="inline">
+            <div class="form-info country">
+              <label for="country">Country</label>
+              <span class="icon"><i class="fa-solid fa-earth-asia"></i></span>
+              <select name="country" id="country">
+                <option value="country" disabled selected>Choose your Country</option>
+                <option value="pakistan">Pakistan</option>
+                <option value="china">China</option>
+                <option value="india">USA</option>
+              </select>
+            </div>
   
-        <div class="container">
-          <div class="item" id="item-1">
-            <img src="./images/photo1.png" alt="item1" />
-            <div class="item-info">
-              <h4>Vinatge Bagpack</h4>
-              <p>
-                $54.99 <span> <strike>$94.99</strike> </span>
-              </p>
-              <h5 class="quantity">
-                <span class="material-symbols-outlined" id="p1-sub">remove</span>
-                <span class="p1-quantity">1</span>
-                <span class="material-symbols-outlined" id="p1-add">add</span>
-              </h5>
+            <div class="form-info PostalCode">
+              <label for="PostalCode">Postal code</label>
+              <span class="icon"><i class="fa-solid fa-paper-plane"></i></span>
+              <input
+                type="number"
+                name="postalcode"
+                id="postalcode"
+                />
             </div>
           </div>
-  
-          <div class="item" id="item-2">
-            <img src="./images/photo2.png" alt="item2" />
-            <div class="item-info">
-              <h4>Levi Shoes</h4>
-              <p>
-                $74.99 <span> <strike>$124.99</strike> </span>
-              </p>
-              <h5 class="quantity">
-                <span class="material-symbols-outlined" id="p2-sub">remove</span>
-                <span class="p2-quantity">1</span>
-                <span class="material-symbols-outlined" id="p2-add">add</span>
-              </h5>
-            </div>
-          </div>
-  
-          <div class="shipping-price">
-            <h5>Shipping</h5>
-            <p>$19</p>
-          </div>
-  
-          <div class="total-price">
-            <h5>Total</h5>
-            <p>$148.98</p>
+        </form>
+
+        <div class="checkbox">
+          <input
+            type="checkbox"
+            name="save-for-later"
+            id="save"
+            />Save this information for next time.
+        </div>
+
+        <button type="submit" class="btn btn-primary">Continue</button>
+      </div>
+
+      <div class="container">
+        <div class="item" id="item-1">
+          <img src="./images/photo1.png" alt="item1" />
+          <div class="item-info">
+            <h4>Vinatge Bagpack</h4>
+            <p>
+              $54.99 <span> <strike>$94.99</strike> </span>
+            </p>
+            <h5 class="quantity">
+              <span class="plus-symbol">+</span> 1 <span class="minus-symbol">-</span>
+            </h5>
           </div>
         </div>
-      </main>
-  
-      <footer>
-        <p>Created by <a class="username-github-link" href="https://github.com/khusamayasir/Interior-Consultant">Usama</a>-<a class="devchallengelink" href="https://devchallenges.io/">devChallenges.io</a></p>
-      </footer>
+
+        <div class="item" id="item-2">
+          <img src="./images/photo2.png" alt="item2" />
+          <div class="item-info">
+            <h4>Levi Shoes</h4>
+            <p>
+              $74.99 <span> <strike>$124.99</strike> </span>
+            </p>
+            <h5 class="quantity">
+              <span class="plus-symbol">+</span> 1 <span class="minus-symbol">-</span>
+            </h5>
+          </div>
+        </div>
+
+        <div class="shipping-price">
+          <h5>Shipping</h5>
+          <p>$19</p>
+        </div>
+
+        <div class="total-price">
+          <h5>Total</h5>
+          <p>$148.98</p>
+        </div>
+      </div>
     </section>
+
+    <footer>
+      <p>Created by <a class="username-github-link" href="https://github.com/khusamayasir/Interior-Consultant">Usama</a>-<a class="devchallengelink" href="https://devchallenges.io/">devChallenges.io</a></p>
+    </footer>
   </body>
 </html>
