--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <h2>Checkout</h2>
     </header>
-    <section class="main-sec">
+    <section class="main">
       <div class="user-info"> 
         <form action="GET" class="my-form">
           <p>Contact Information</p>
