--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </section>
 
     <footer>
-      <p>Created by <a class="username-github-link" href="https://github.com/khusamayasir/Checkout-Page">Usama</a>-<a class="devchallengelink" href="https://devchallenges.io/">devChallenges.io</a></p>
+      <p>Created by <a class="username-github-link" href="https://github.com/khusamayasir/Checkout-Page">Usama</a>-<a class="devchallenge-link" href="https://devchallenges.io/">devChallenges.io</a></p>
     </footer>
   </body>
 </html>
